x264: Use profile and level from caps

Enforces the profile and level from the downstream caps, also
sets them on the fixated caps

https://bugzilla.gnome.org/show_bug.cgi?id=644233